Basic outline done

--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -23,11 +23,11 @@
 			opacity: 1;
 		}
 
-		body.is-preload #header .content .inner {
+		/* body.is-preload #header .content .inner {
 			max-height: none;
 			padding: 3rem 2rem;
 			opacity: 1;
-		}
+		} */
 
 /* Main */
 
